# Bad-Robots

./: 2web.sh  2web_WASM.sh  CMakeLists.txt  LICENSE  README.md
BadRobots/: BadRobots  BadRobots.html  credits.txt
BadRobots/src/: BadRobots.cpp
BadRobots/src/Const/: BRConst.h
BadRobots/src/Controllers/CreditsController/: BRCreditsController.cpp  BRCreditsController.h
BadRobots/src/Controllers/CreditsController/CreditsFactory/: BRCreditsFactory.cpp  BRCreditsFactory.h
BadRobots/src/Controllers/ExitController/: BRExitController.cpp  BRExitController.h
BadRobots/src/Controllers/GameController/: BRGameController.cpp  BRGameController.h
BadRobots/src/Controllers/GameOverController/: BRGameOverController.cpp  BRGameOverController.h
BadRobots/src/Controllers/GameOverController/GameOverFactory/: BRGameOverFactory.cpp  BRGameOverFactory.h
BadRobots/src/Controllers/InGameController/: BRInGameController.cpp  BRInGameController.h
BadRobots/src/Controllers/InGameController/CrosshairController/: BRCrosshairController.cpp  BRCrosshairController.h
BadRobots/src/Controllers/InGameController/GameOverRuleController/: BRGameOverRuleController.cpp  BRGameOverRuleController.h  BRGameOverRuleControllerDelegate.cpp  BRGameOverRuleControllerDelegate.h
BadRobots/src/Controllers/InGameController/GameScoreController/: BRGameScoreController.cpp  (+1 more)
BadRobots/src/Controllers/MenuController/: BRMenuController.cpp  BRMenuController.h
BadRobots/src/Data/GameScore/: BRGameScore.cpp  BRGameScore.h
BadRobots/src/Data/SceneFactory/: BRSceneFactory.cpp  BRSceneFactory.h
(+12 files in other folders)
